fix: navbar and hero buttons visibility fix: required conditions agree on registration fix: full height mobile video-player

--- a/app/globals.css
+++ b/app/globals.css
@@ -137,8 +137,9 @@ video::-webkit-media-controls {
 
 @media (max-width: 1023px) {
   .video-sizer {
-    width: 100vw;
-    height: auto;
+    width: 100vw !important;
+    height: calc(100dvh - 64px) !important;
+    aspect-ratio: unset !important;
   }
 }
 @media (min-width: 1024px) {
